[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/game_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/main.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/settings.tscn" type="PackedScene" id=3]

[node name="Game Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.47583
margin_bottom = -1.47583
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" parent="." instance=ExtResource( 2 )]

[node name="Settings" parent="." instance=ExtResource( 3 )]

[node name="version" type="Label" parent="."]
margin_left = 411.794
margin_top = 998.32
margin_right = 560.794
margin_bottom = 1012.32
text = "version 1.5.0 build 8"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="play_pressed" from="Main" to="." method="_on_Main_play_pressed"]
[connection signal="play_time_attack_pressed" from="Main" to="." method="_on_Main_play_time_attack_pressed"]
[connection signal="settings_pressed" from="Main" to="." method="_on_Main_settings_pressed"]
[connection signal="back_button" from="Settings" to="." method="_on_Settings_back_button"]
